@@ -69,3 +69,8 @@
  - re-factor script installer posts
 	- check for www.domain.com vs domain.com
 
+ - IDN support for domain names
+	- FS#3828
+	- IDNA::Punycode
+	- Convert at create time, and when displaying?
+	- Has to be done on a per-domain-component basis
