@@ -886,3 +886,4 @@ When a script does not get fully installed (perhaps due to Virtualmin not being 
 Wordpress, WPMU and bbPress are now downloaded from the Virtualmin website in preference to their developer's sites, as there is no way to fetch specific older versions from the original site.
 The alias to bounce all mail to unknown addresses in a domain is no longer created when using Postfix, as it does not appear to be necessary.
 Updated the phpPgAdmin script installer to version 4.2, phpCOIN to 1.4.1, TikiWiki to 1.9.11, bbPress to 0.9.0.1, and SugarCRM to 5.0.0c.
+Added a Module Config option to prevent creation of the deniedssh group.
